@startuml

note "FDrdoid Domain Model" as FDroid


note "Like a Supermarket\nwhere app-s can be\ndownloaded from" as NoteRepo

class Repo <<DatabaseEntity>> {
  mirrors[]
  name
  description
  icon
  address
  timestamp
  getUrl()
}

class App <<DatabaseEntity>> {
  packageName
  added
  lastUpdated
  icon
  searchInfos
}

class Version <<DatabaseEntity>> {
  apkName
  versionCode
  versionName
  added
  size

  nativecode
  minSdkVersion
  targetSdkVersion
  maxSdkVersion
}

class Localized <<DatabaseEntity>> {
  whatsNew
  name
  summary
  description
  icon
  phoneScreenshots[]
}

class AppWithDetails <<AggregatRoot>>
class Locale <<DatabaseEntity>>
class AppCategory <<DatabaseEntity>>
class Category <<DatabaseEntity>>

AppWithDetails..> Repo
AppWithDetails -> App
AppWithDetails *--> Localized : Translation
AppWithDetails o--> Version : Compatibility Info\n+ APK Download
Repo o--> Version
Locale <..o Localized : "Language"

AppWithDetails *--> AppCategory
AppCategory o-> Category


NoteRepo .. Repo
FDroid .. AppWithDetails
@enduml